--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -85,14 +85,15 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form">
+										<form name="group_form" role="form" ng-validate="validationOptions" ng-submit="saveUserGroup(usergroup, group_form)" id="group_form">
 											<div class="modal-header">
 												<h4 class="modal-title custom-font">Create User Groups</h4>
 											</div>
+											<span class="error">{{user_group_error}}</span>
 											<div class="modal-body">											
 												<div class="form-group">
 													<label for="">Group Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+													<input type="text" name="usergroup_name" id="usergroup_name" class="form-control mb-10" placeholder="" ng-model="usergroup.usergroup_name" required>
 												</div>
 												
 												<div class="form-group">
