--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -195,7 +195,7 @@
 																		</div>
 																	</div>
 																	<div class="col-md-6 last" ng-hide="userData.status==0">
-																		<div ng-controller="DatepickerDemoCtrl">
+																		<div>
 																			<label for="">Expiration Date</label>
 																			<input type="text" class="form-control" ng-model="userData.expiration_date" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
 																		</div>
