Changes done for user edit form

--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -215,22 +215,25 @@
 							<uib-tab heading="Edit Profile">
 								<div class="wrap-reset"> 
 									<!-- <form ng-submit="submitEditUser(editUser)"> -->
+
+										
 										<div class="profile-settings"> 
-										<form ng-submit="submitEditUser(editUser)">
+										<form ng-submit="submitEditUser(editUser, user_edit)" name="user_edit" ng-validate="validationOptions">
 											<div class="row">
 												<div class="form-group col-md-12 legend">
 													<h4><strong>Account</strong></h4>
 												</div>
 											</div>
+											<span ng-repeat="e in editUserMessage" class="error">{{e}}</span>
 											
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="first-name">First Name</label>
-													<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="userData.user_first_name">
+													<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="userData.user_first_name" name="first-name" required>
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="last-name">Last Name</label>
-													<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="userData.user_last_name">
+													<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="userData.user_last_name" name="last-name" required>
 												</div>
 											</div>
 											
@@ -242,7 +245,7 @@
 												<div class="form-group col-sm-6 editprofile">
 													<label for="profile">Profile Photo</label>
 													<div class="profilephoto">
-														<input ui-jq="filestyle" type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+														<!-- <input ui-jq="filestyle" type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1"> -->
 														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 													</div>
 												</div>
@@ -255,14 +258,14 @@
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="address1">Address</label>
-													<input type="text" class="form-control" id="address1" ng-model="editUser.address" ng-value="userData.user_address">
+													<input type="text" class="form-control" id="address1" ng-model="editUser.address" ng-value="userData.user_address" name="address1" required>
 												</div>
 											</div>
 											
 											<div class="row">
 												<div class="form-group col-sm-12">
 													<label for="bio">Description</label>
-													<textarea class="form-control" id="bio" ng-model="editUser.description" style="height:125px;">{{userData.description}}</textarea>
+													<textarea class="form-control" id="bio" ng-model="editUser.description" style="height:125px;" name="bio" required>{{userData.description}}</textarea>
 												</div>
 											</div>
 											
@@ -286,9 +289,6 @@
 												</div>
 													
 												</div>
-											</div>
-											<div>
-												<p ng-repeat="e in editUserMessage">{{e}}</p>
 											</div>
 											<button type="submit">Submit</button>
 										</form>
@@ -323,14 +323,14 @@
 											<button type="submit">Submit</button>
 										</form>
 										
-										<form ng-submit="submitEditPhoneCode(editUser)">
+										<form>
 											<div class="row">
 											  <div class="form-group col-md-12 legend">
 												<h5><strong>Phone Code</strong></h5>
 												
 											  </div>
 											</div>
-											
+											<span class="error">{{PhoneCodeMessage}}</span>
 											<div class="row">										
 												<div class="form-group col-sm-6">
 													<label for="">Code</label>
@@ -346,28 +346,30 @@
 											</div>
 											
 										
-											<!-- <div class="row">										
-												<div class="form-group col-sm-6 editaddphone">
-													<label for="">Phone</label>
-													<div class="widget-todo" >
-														<div class="form-horizontal">
-															<input type="text" class="form-control" id="todo" ng-model="editUser.phone_numbers" placeholder="">
-															<button type="submit" class="btn addphone"><i class="fa fa-plus text-lg"></i></button>
-														</div>
-													</div>
-													
-												</div>
-											</div> -->
-										
 											<div class="row">										
 												<div class="form-group col-sm-6 editaddphone">
 													<label for="">Phone</label>
-													
-													
+													<div class="widget-todo" ng-controller="TodoWidgetCtrl">
+														<span class="error">{{phone_length}}</span>
+														<form class="form-horizontal" role="form">
+														<div class="form-horizontal">
+		   												<input type="text" class="form-control" id="todo" ng-model="todo" placeholder="" required ng-model="editUser.phone_numbers" ng-value="editUser.phone_numbers">
+		   												<button type="submit" class="btn addphone" ng-click="addTodo()"><i class="fa fa-plus text-lg"></i></button>
+		   											</div>
+		  											</form>
+
+														<ul class="todo-list list-unstyled">
+														  <li ng-repeat="todo in todos" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+															<div class="view">					 
+																<span ng-dblclick="editTodo(todo)">{{todo.text}}</span>
+																<a href="javascriph:;" class="text-danger remove-todo pull-right" ng-click="removeTodo(todo)" aria-label="Remove"><i class="fa fa-times"></i></a>
+															</div>
+														  </li>
+														</ul>
+													</div>
 												</div>
 											</div>
-											<div ng-repeat="y in PhoneCodeMessage">{{y}}</div>
-											<button type="submit">Submit</button>
+											<button type="submit" ng-click="submitEditPhoneCode(editUser)">Submit</button>
 										</form>
 										<form ng-submit="submitEditRFIDCode(editUser)">
 											<div class="row">
@@ -480,7 +482,7 @@
 																<tr ng-repeat="x in userGroup">
 																	<td>{{x.usergroup_name}}</td>
 																	<td>
-																		<button type="button" ng-click="deleteGroup(x.usergroup_id)" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
+																		<button type="button" ng-click="unassignUserGroupEdit(x.usergroup_id)" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																	</td>
 																</tr>
 															</tbody>
