--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -269,19 +269,19 @@
 												</div>
 											</div>
 											
-											<div class="row" ng-controller="ActivebtnCtrl">										
+											<div class="row">										
 												<div class="form-group col-sm-6">
 													<label for="">Status</label><br/>
 													<div class="btn-group btnrounded" >
-														<label class="btn btn-default" ng-model="userData.user_status" uib-btn-radio="1">Active</label>
-														<label class="btn btn-default" ng-model="userData.user_status" uib-btn-radio="0">Inactive</label>
+														<label class="btn btn-default" ng-model="editUser.user_status" uib-btn-radio="1">Active</label>
+														<label class="btn btn-default" ng-model="editUser.user_status" uib-btn-radio="0">Inactive</label>
 													</div>
 												</div>
-												<div class="form-group col-sm-6 editprofile" ng-hide="userData.user_status==0">
+												<div class="form-group col-sm-6 editprofile" ng-hide="editUser.user_status==0">
 												<div ng-controller="DatepickerDemoCtrl">
 													<label for="">Expiration Date</label>
 													<div class="input-group userexp">
-														<input type="text" class="form-control" ng-model="editUser.expiration_date" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+														<input type="text" class="form-control" ng-model="editUser.expiration_date" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-value="editUser.expiration_date"/>
 														<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 														</span>
@@ -293,7 +293,7 @@
 											<button type="submit">Submit</button>
 										</form>
 										
-										<form ng-submit="submitEditAccessCode(editUser)">
+										<form ng-submit="submitEditAccessCode(editUser, access_edit_form)" ng-validate="validationOptions" name="access_edit_form">
 											<div class="row">
 											  <div class="form-group col-md-12 legend">
 												<h4><strong><br/>Credentials</strong></h4>
@@ -305,21 +305,20 @@
 												<h5><strong>Access Code</strong></h5>
 											  </div>
 											</div>
-											
+											<span class="error">{{AccessCodeMessage}}</span>
 											<div class="row">										
 												<div class="form-group col-sm-6">
 													<label for="">Code</label>
-													<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-model="editUser.access_code">
+													<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="access_code" ng-model="editUser.access_code" name="access_code" required><img class="img-circle" src="images/refresh.png" alt="" ng-click="generateAccessCode()">
 												</div>
 												<div class="form-group col-sm-6 editprofile">
-													<label for="">Status</label><br/>
+													<label for="access_code_status">Status</label><br/>
 													<div class="btn-group btnrounded">
-														<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="1">Active</label>
-														<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="0">Inactive</label>
+														<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="1" name="access_code_status">Active</label>
+														<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="0" name="access_code_status">Inactive</label>
 													</div>
 												</div>
 											</div>
-											<div ng-repeat="x in AccessCodeMessage">{{x}}</div>
 											<button type="submit">Submit</button>
 										</form>
 										
@@ -335,6 +334,7 @@
 												<div class="form-group col-sm-6">
 													<label for="">Code</label>
 													<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-value="editUser.phone_code">
+													<img class="img-circle" src="images/refresh.png" alt="" ng-click="generatePhoneCode()">
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Status</label><br/>
@@ -371,24 +371,23 @@
 											</div>
 											<button type="submit" ng-click="submitEditPhoneCode(editUser)">Submit</button>
 										</form>
-										<form ng-submit="submitEditRFIDCode(editUser)">
+										<form ng-submit="submitEditRFIDCode(editUser, rfid_form)" name="rfid_form" ng-validate="validationOptions" > 
 											<div class="row">
 											  <div class="form-group col-md-12 legend">
 												<h5><strong>RFID Code</strong></h5>
 											  </div>
 											</div>
-											
+											<span class="error">{{EditRFIDCodeMsg}}</span>
 											<div class="row">										
 												<div class="form-group col-sm-6">
 													<label for="">Card Number</label>
-													<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-model="editUser.rfid_card_no">
+													<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-model="editUser.rfid_card_no" name="rfid_card_no" required>
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Facility Code</label>
-													<input type="text" class="form-control number" id="" ng-keypress="onlyNumber($event)" ng-model="editUser.rfid_facility_code">
+													<input type="text" class="form-control number" id="" ng-keypress="onlyNumber($event)" ng-model="editUser.rfid_facility_code" name="rfid_facility_code" required>
 												</div>
 											</div>
-											
 											<div class="row">
 												<div class="form-group col-sm-6">
 													<label for="">Status</label><br/>
@@ -398,21 +397,24 @@
 													</div>
 												</div>
 											</div>
+											<button type="submit">Submit</button>
+										</form>
 											
 											<div class="row">
 												<div class="form-group col-md-12 legend">
 													<h5><strong>BLE Code</strong></h5>
 												</div>
 											</div>
-											
+										<span class="error">{{bleerror}}</span>	
+										<form ng-submit="submitEditBLECode(editUser, ble_edit_form)" ng-validate="validationOptions" name="ble_edit_form">
 											<div class="row">										
 												<div class="form-group col-sm-6">
 													<label for="">Username</label>
-													<input type="text" class="form-control" id="" ng-model="editUser.ble_name">
+													<input type="text" class="form-control" id="" ng-model="editUser.ble_name" name="ble_name" required>
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Password</label>
-													<input type="password" class="form-control" id="" ng-model="editUser.ble_pass">
+													<input type="password" class="form-control" id="" ng-model="editUser.ble_pass" name="ble_pass" required>
 												</div>
 											</div>
 											
@@ -429,7 +431,6 @@
 													</div>
 												</div>
 											</div>
-											<div ng-repeat="x in EditRFIDCodeMsg">{{x}}</div>
 											<button type="submit">Submit</button>
 										</form>
 											<div class="row">
